# Region-Detection

./: README.md
region_detection_core/: CMakeLists.txt  README.md  package.xml
region_detection_core/cmake/: region_detection-config.cmake.in  region_detection_core-config.cmake.in
region_detection_core/config/: config.yaml
region_detection_core/include/: region_detector.h
region_detection_core/include/region_detection_core/: config_types.h  region_crop.h  region_detector.h
region_detection_core/src/: region_crop.cpp  region_detector.cpp
region_detection_core/src/tests/: adaptive_threshold_test.cpp  region_detection_test.cpp  threshold_grayscale_test.cpp  threshold_in_range_test.cpp
region_detection_msgs/: CMakeLists.txt  package.xml
region_detection_msgs/msg/: PoseSet.msg
region_detection_msgs/srv/: CropData.srv  DetectRegions.srv  GetSelectedRegions.srv  ShowSelectableRegions.srv
region_detection_rclcpp/: CMakeLists.txt  README.md  package.xml
region_detection_rclcpp/src/: crop_data_server.cpp  interactive_region_selection.cpp  region_detector_server.cpp
region_detection_roscpp_demo/: CMakeLists.txt  README.md  package.xml
region_detection_roscpp_demo/config/: config2d.yaml  config3d.yaml  data_list.yaml  data_multiset.yaml  demo.rviz  region_detect.yaml  region_detect_mult_imgs.yaml
region_detection_roscpp_demo/launch/: detect_regions_demo.launch  detect_regions_multiset_demo.launch
region_detection_roscpp_demo/src/: detect_regions_demo.cpp
