<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>region_detection_rclcpp</name>
  <version>0.0.0</version>
  <description>Various nodes that allow detecting regions and cropping data</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>region_detection_core</depend>
  <depend>region_detection_msgs</depend>
  <depend>interactive_markers</depend>  
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_eigen</depend>
  
  <exec_depend>launch_xml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
